# PythonPackageManager

./: README.md  main.py  pyproject.toml  requirements.txt
core/: base_operation.py  package_manager.py
gui/: main_window.py  packages_window.py
src/: main.py
src/pkgr/core/: base_operation.py  package_manager.py
src/pkgr/gui/: packages_window.py
